--- a/lang/text-en.json
+++ b/lang/text-en.json
@@ -124,6 +124,7 @@
   "news":{
     "title": "NEWS",
     "secTitle": "NEWS",
+    "view": "View the report",
     "list":{
       "item1":{
         "name":"Cooperation with the company of Tian Mei",
